# munje

./: .gitignore  LICENSE  README.md  munje.cabal  parser.hs
examples/: factorial.emj  human-god.emj
munje/: parser.out  parser.py  parsetab.py
src/: Main.hs  Munje.hs  Parser.hs  parser.hs
src/Munje/: Logic.hs  Parser.hs
